syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "CareerCloud.gRPC.Protos";

service SecurityLoginsLog{
	rpc GetSecurityLoginsLog(IdSecLoginLog) returns (SecurityLoginsLogReply);
	rpc GetSecurityLoginsLogs(google.protobuf.Empty) returns (SecurityLoginsLogs);
	rpc AddSecurityLoginsLog(SecurityLoginsLogs) returns (google.protobuf.Empty);
	rpc UpdateSecurityLoginsLog(SecurityLoginsLogs) returns (google.protobuf.Empty);
	rpc DeleteSecurityLoginsLog(SecurityLoginsLogs) returns (google.protobuf.Empty);
}

message IdSecLoginLog{
	string Id =1;
}

message SecurityLoginsLogs{
	repeated SecurityLoginsLogReply SecLoginLogs =1;
}

message SecurityLoginsLogReply{
	string Id = 1;
	string Login =2;
	string SourceIP =3;	
	google.protobuf.Timestamp LogonDate =4;
	bool IsSuccessful =5;
}
